# pbfetch

./: .gitignore  PKGBUILD  README.md  config.conf  config.txt  fetch.py  hw  logo.txt  nextfetch.py  pbfetch  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
etc/: PKGBUILD
legacy/: config_new.txt
src/fetch/: __init__.py
src/pbfetch/: __init__.py  __main__.py  config.py  constants.py  fetch.py  handle_config.py  handle_error.py  horizontal_formatter.py  parse_mem.py  parse_temp.py  parse_uptime.py  stats.py
src/pbfetch/BACKUP/: config.txt  config_default.txt  penny.py
src/pbfetch/config/: config.txt
src/pbfetch/constants/: constants.py  default_config.py
src/pbfetch/main_funcs/: fetch.py  handle_config.py  horizontal_formatter.py  run_fetch.py  stats.py
src/pbfetch/parse/: battery.py  bios_type.py  computer_name.py  cpu.py  cpu_temp.py  cpu_usage.py  de.py  disk.py  font.py  fs.py  gpu.py  hostname.py  kernel.py  login.py  memory.py  motherboard.py  os.py  packages.py  resolution.py  shell.py  temp.py  term_font.py  theme.py  uptime.py  weather.py  wm.py
src/pbfetch/parse_funcs/: fetch.py  parse_batt.py  parse_bios_type.py  parse_comp_name.py  parse_cpu.py  parse_cpu_temp.py  parse_cpu_usage.py  parse_de.py  parse_disc.py  parse_font.py  parse_fs.py  parse_gpu_name.py  parse_kernel.py  parse_mb.py  parse_mem.py  parse_os.py  parse_packages.py  parse_res.py  parse_shell.py  parse_term_font.py  parse_theme.py  parse_weather.py  parse_wm.py
src/pbfetch/parsers/: battery.py  bios_type.py  computer_name.py  cpu.py  cpu_temperature.py  cpu_usage.py  de.py  fs.py  gpu.py  hostname.py  kernel.py  memory.py  motherboard.py  os_release.py  packages.py  passwd.py  resolution.py  shell.py  temperature.py  uptime.py  wm.py
