[project]
name = "pbfetch"
version = "0.1.0"
description = "An unbelievably customizable hardware/software fetch."
authors = [
    { name = "pennybelle", email = "kylanfreeman98@gmail.com" }
]
dependencies = [
    "psutil"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pbfetch"]

[project.scripts]
pbfetch = "pbfetch:main"
